--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,7 @@
     <script src="popup.js"></script>
   </head>
   <body>
+    <p id='pagetitle'></p>
     <div id="root"></div>
   </body>
 </html>
