--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,13 +16,18 @@
       background-color: green;
       border-radius: 50%;
     }
+    .button {
+      height: 30px;
+      width: 30px;
+      outline: none;
+    }
     </style>
     <link rel="apple-touch-icon" href="Users/jasonwin/stonks-fake-news-detector/public/logo-small.png" />
     <link rel="manifest" href="Users/jasonwin/stonks-fake-news-detector/public/manifest.json" />
     <title>Fake News Detector</title>
-    <script src="popup.js"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <button>getUrl</button>
+    <script src="popup.js"></script>
   </body>
 </html>
